--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p>
             En la actualidad, el IES Pablo Picasso acoge en torno a 750 alumnos escolarizados desde 1º de Educación Secundaria Obligatoria hasta 2º de Bachillerato, además de los grupos de enseñanzas profesionales de Técnico en Sistemas Microinformáticos y Redes y de Técnico Superior de Desarrollo de Aplicaciones Multiplataforma, ambos en modalidades ordinaria y Dual.
         </p>
+        <img src="./ImagenPicasso.jpg" alt="ImagenPicasso">
     </div>
    
     <div class="footer">
