--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             En la actualidad, el IES Pablo Picasso acoge en torno a 750 alumnos escolarizados desde 1º de Educación Secundaria Obligatoria hasta 2º de Bachillerato, además de los grupos de enseñanzas profesionales de Técnico en Sistemas Microinformáticos y Redes y de Técnico Superior de Desarrollo de Aplicaciones Multiplataforma, ambos en modalidades ordinaria y Dual.
         </p>
         <img src="./ImagenPicasso.jpg" alt="ImagenPicasso">
+        <p>
+            El periodo de vacaciones de navidad comenzará el 20 de diciembre hasta el 8 de enero
+        </p>
     </div>
    
     <div class="footer">
